kustomize/storage/block-storage/longhorn/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    istio-injection: enabled
